--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "prepublish": "require-npm4-to-publish",
-    "prepare": "npm run build",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"; npm run build",
     "build": "grunt build",
     "webpack-browser": "grunt browser",
     "webpack-module": "grunt module",
@@ -26,49 +26,49 @@
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.22.0",
     "@balena/abstract-sql-to-typescript": "^1.3.0",
-    "@balena/lf-to-abstract-sql": "^4.5.1",
-    "@balena/odata-parser": "^2.4.0",
+    "@balena/lf-to-abstract-sql": "^4.5.5",
+    "@balena/odata-parser": "^2.4.2",
     "@balena/odata-to-abstract-sql": "^5.7.0",
-    "@balena/sbvr-parser": "^1.4.1",
-    "@balena/sbvr-types": "^3.4.7",
+    "@balena/sbvr-parser": "^1.4.2",
+    "@balena/sbvr-types": "^3.4.15",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/deep-freeze": "^0.1.2",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
-    "@types/lodash": "^4.14.185",
+    "@types/lodash": "^4.14.190",
     "@types/memoizee": "^0.4.8",
     "@types/method-override": "^0.0.32",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/node": "^12.20.55",
-    "@types/passport": "^1.0.9",
+    "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/passport-strategy": "^0.2.35",
     "@types/pg": "^8.6.5",
     "@types/randomstring": "^1.1.8",
     "@types/websql": "^0.0.27",
-    "commander": "^9.4.0",
+    "commander": "^9.4.1",
     "deep-freeze": "^0.0.1",
     "eventemitter3": "^4.0.7",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.15",
     "pinejs-client-core": "^6.12.2",
-    "randomstring": "^1.2.2",
+    "randomstring": "^1.2.3",
     "typed-error": "^3.2.1"
   },
   "devDependencies": {
-    "@balena/lint": "^6.2.0",
-    "@types/chai": "^4.3.1",
+    "@balena/lint": "^6.2.1",
+    "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/grunt": "^0.4.27",
-    "@types/mocha": "^9.1.1",
+    "@types/mocha": "^10.0.0",
     "@types/supertest": "^2.0.12",
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack": "^5.28.0",
-    "chai": "^4.3.6",
+    "chai": "^4.3.7",
     "grunt": "^1.5.3",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-cli": "^1.4.3",
@@ -80,43 +80,38 @@
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^5.0.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.2",
     "lint-staged": "^12.5.0",
     "load-grunt-tasks": "^5.1.0",
-    "mocha": "^9.2.2",
+    "mocha": "^10.1.0",
     "raw-loader": "^4.0.2",
     "require-npm4-to-publish": "^1.0.0",
-    "supertest": "^6.2.4",
-    "terser-webpack-plugin": "^5.3.3",
-    "ts-loader": "^9.3.1",
+    "supertest": "^6.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "webpack": "^5.73.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack": "^5.75.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "optionalDependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "method-override": "^3.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
     "serve-static": "^1.15.0"
   },
   "engines": {
     "node": ">=12.0.0",
     "npm": ">=6.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.js": [
