--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "prepublish": "require-npm4-to-publish",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"; npm run build",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\" && npm run build",
     "build": "grunt build",
     "webpack-browser": "grunt browser",
     "webpack-module": "grunt module",
@@ -24,20 +24,20 @@
     "prettify": "balena-lint -e js -e ts --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^7.22.0",
+    "@balena/abstract-sql-compiler": "^7.22.4",
     "@balena/abstract-sql-to-typescript": "^1.3.0",
-    "@balena/lf-to-abstract-sql": "^4.5.5",
+    "@balena/lf-to-abstract-sql": "^4.5.6",
     "@balena/odata-parser": "^2.4.2",
-    "@balena/odata-to-abstract-sql": "^5.7.0",
-    "@balena/sbvr-parser": "^1.4.2",
-    "@balena/sbvr-types": "^3.4.15",
+    "@balena/odata-to-abstract-sql": "^5.7.2",
+    "@balena/sbvr-parser": "^1.4.3",
+    "@balena/sbvr-types": "^3.4.18",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
-    "@types/lodash": "^4.14.190",
+    "@types/lodash": "^4.14.191",
     "@types/memoizee": "^0.4.8",
     "@types/method-override": "^0.0.32",
     "@types/multer": "^1.4.7",
@@ -51,7 +51,7 @@
     "@types/websql": "^0.0.27",
     "commander": "^9.4.1",
     "deep-freeze": "^0.0.1",
-    "eventemitter3": "^4.0.7",
+    "eventemitter3": "^5.0.0",
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.15",
@@ -64,7 +64,7 @@
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
     "@types/grunt": "^0.4.27",
-    "@types/mocha": "^10.0.0",
+    "@types/mocha": "^10.0.1",
     "@types/supertest": "^2.0.12",
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/webpack": "^5.28.0",
@@ -81,14 +81,14 @@
     "grunt-ts": "^6.0.0-beta.22",
     "grunt-webpack": "^5.0.0",
     "husky": "^8.0.2",
-    "lint-staged": "^12.5.0",
+    "lint-staged": "^13.0.4",
     "load-grunt-tasks": "^5.1.0",
     "mocha": "^10.1.0",
     "raw-loader": "^4.0.2",
     "require-npm4-to-publish": "^1.0.0",
     "supertest": "^6.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
