--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Update debugging docs
+      hash: 6c6331cab24edc0d1264166d885c52246f71d04f
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 14.54.1
+  title: ""
+  date: 2022-12-12T16:56:30.099Z
+- commits:
     - subject: Update postgres Docker tag to v15
       hash: e1c8e1436dae44739a844ecc86c09fd084f09e86
       body: |
